--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.4.0",
     "axois": "^0.0.1-security",
     "gsap": "^3.12.2",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
